# kaggle-templeate-enviroment

./: .gitignore  Dockerfile  Dockerfile.gpu  README.md  docker-compose.yml  pyproject.toml
devcontainer/: devcontainer.json
